--- a/examples/problems/_QGE.ipynb
+++ b/examples/problems/_QGE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,11 @@
     "    \n",
     "    def eq2(input_, output_):\n",
     "        r0 = 0.0036\n",
+    "        \n",
     "        #second equation\n",
     "        output = output_.extract(['q']) + r0 * nabla(output_.extract(['si']), input_, d = ['x', 'y']) - input_.extract(['y'])\n",
-    "        \n",
     "        return output\n",
     "        \n",
-    "    \n",
     "    def continuity(input_, output_):\n",
     "        si_curl = curl(output_.extract(['si']), input_, d = ['x', 'y'])\n",
     "        return div(si_curl, input_, d = ['x', 'y'])\n",
@@ -63,46 +62,55 @@
     "        value = input_.extract(['y'])\n",
     "        return output_.extract(['q']) - value\n",
     "    \n",
-    "\n",
+    "    def si(input_, output_):\n",
+    "        si_expected = 0.0\n",
+    "        return output_.extract(['si']) - si_expected\n",
+    "        \n",
+    "    \n",
     "    conditions = {\n",
     "        't0': Condition(Span({'x': [0, 1], 'y': [-1, 1], 't' : 0}), initial),\n",
-    "        'zeta_condition': Condition(Span({'x': [0,1], 'y': [-1, 1], 't': 0}), zeta),      \n",
+    "        \n",
+    "        'upper': Condition(Span({'x':  [0,1], 'y': 1, 't': [0,100]}), [si, zeta]),\n",
+    "        'fixedWall1': Condition(Span({'x':  0, 'y': [-1,1], 't': [0,100]}), [si, zeta]),\n",
+    "        'fixedWall2': Condition(Span({'x':  1, 'y': [-1,1], 't': [0,100]}), [si, zeta]),\n",
+    "        'fixedWall3': Condition(Span({'x':  [0,1], 'y': -1, 't': [0,100]}), [si, zeta]),\n",
+    "        \n",
     "        'D': Condition(Span({'x': [0, 1], 'y': [-1, 1], 't': [0, 100]}), [eq1, eq2, continuity]),\n",
     "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00000] 1.527122e+00 3.014273e-01 3.771209e-01 4.750122e-01 3.735611e-01 2.624186e-21 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00001] 1.400715e+00 1.817428e-01 3.673540e-01 4.750028e-01 3.766153e-01 2.626096e-21 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00010] 1.243502e+00 4.319151e-02 3.654780e-01 4.749358e-01 3.598964e-01 1.154872e-20 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00020] 1.189990e+00 9.365900e-04 3.608942e-01 4.748901e-01 3.532690e-01 1.162620e-20 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00030] 1.154493e+00 1.587994e-03 3.496467e-01 4.747881e-01 3.284706e-01 7.042892e-20 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00040] 1.011622e+00 5.792418e-03 3.061497e-01 4.739758e-01 2.257036e-01 1.190532e-18 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00050] 7.378466e-01 4.355581e-03 1.993839e-01 4.716498e-01 6.245732e-02 6.618655e-18 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00060] 6.377926e-01 1.181509e-02 8.130114e-02 4.698277e-01 7.484870e-02 1.102548e-17 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00070] 5.231015e-01 1.330229e-02 2.250641e-02 4.720508e-01 1.524198e-02 8.337369e-18 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00080] 4.892828e-01 6.475357e-03 3.524709e-03 4.741437e-01 5.138996e-03 4.414465e-18 \n",
-      "              sum          t0initial    zeta_conditi Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00090] 4.790494e-01 5.420636e-04 1.600986e-03 4.748990e-01 2.007267e-03 2.499298e-18 \n",
-      "[epoch 00100] 4.768840e-01 1.421089e-04 7.837021e-04 4.745077e-01 1.450502e-03 2.114505e-18 \n"
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00000] 4.596383e+00 9.465576e-02 1.289987e-01 6.257340e-01 1.262244e-01 4.492284e-01 1.279554e-01 4.481099e-01 1.252213e-01 1.546480e+00 4.750965e-01 4.486783e-01 7.133527e-23 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00001] 4.127789e+00 5.082783e-02 5.857614e-02 9.685171e-01 5.738002e-02 4.182834e-01 5.810627e-02 4.183000e-01 5.693063e-02 1.147446e+00 4.751226e-01 4.182987e-01 5.239217e-23 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00010] 3.648098e+00 9.521527e-03 1.504333e-02 9.525780e-01 1.500309e-02 3.687067e-01 1.512767e-02 3.685733e-01 1.507650e-02 1.044782e+00 4.750425e-01 3.686426e-01 2.231908e-23 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00020] 3.556376e+00 1.757568e-03 2.322896e-03 9.979103e-01 2.188642e-03 3.644857e-01 2.141444e-03 3.643892e-01 2.017416e-03 9.796650e-01 4.750598e-01 3.644378e-01 6.326164e-23 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00030] 3.450492e+00 6.903266e-05 6.470439e-04 9.529269e-01 4.729591e-04 3.540168e-01 4.002090e-04 3.537005e-01 2.679654e-04 9.591597e-01 4.750032e-01 3.538274e-01 1.404067e-21 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00040] 2.913270e+00 2.444340e-03 6.819163e-04 8.476053e-01 6.821170e-04 2.901137e-01 7.335973e-04 2.924458e-01 1.066888e-03 7.120418e-01 4.746010e-01 2.908536e-01 6.606725e-20 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00050] 1.043584e+00 2.596296e-04 1.133026e-02 2.562585e-01 2.731963e-03 5.769854e-02 1.695854e-03 1.043888e-01 7.114472e-04 5.864041e-02 4.719788e-01 7.788983e-02 5.166329e-18 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00060] 6.929560e-01 1.757432e-03 5.636476e-04 2.407588e-02 2.130151e-03 2.967824e-02 2.162569e-03 3.926783e-02 1.249962e-03 8.904722e-02 4.715795e-01 3.144361e-02 5.910445e-18 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00070] 5.504549e-01 2.401190e-04 2.205587e-04 2.899063e-02 5.907647e-04 8.154479e-03 7.661279e-04 1.265917e-02 3.516099e-03 1.286366e-02 4.734118e-01 9.041545e-03 3.170798e-18 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00080] 5.133942e-01 4.164526e-04 2.850695e-04 1.220937e-02 8.065357e-04 7.204802e-03 8.199941e-04 3.846897e-03 8.037472e-04 7.302342e-03 4.748078e-01 4.891215e-03 2.212092e-18 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
+      "[epoch 00090] 5.057357e-01 9.408018e-05 7.219871e-04 6.688829e-03 3.712844e-04 7.477771e-03 3.855122e-04 4.324162e-03 5.043219e-04 4.072263e-03 4.754677e-01 5.627831e-03 2.257090e-18 \n",
+      "[epoch 00100] 4.911764e-01 1.496597e-04 5.381473e-04 5.328468e-03 2.677701e-04 2.716702e-03 2.716647e-04 2.209571e-03 3.644706e-04 1.712634e-03 4.753574e-01 2.259949e-03 1.918077e-18 \n"
      ]
     }
    ],
@@ -138,7 +146,7 @@
     "            {'n': 100, 'mode': 'grid', 'variables': 't'},\n",
     "            {'n': 20, 'mode': 'grid', 'variables': 'x'},\n",
     "            {'n': 20, 'mode': 'grid', 'variables': 'y'},\n",
-    "            locations=['t0', 'zeta_condition', 'D'])\n",
+    "            locations=['t0', 'upper','fixedWall1','fixedWall2','fixedWall3', 'D'])\n",
     "    \n",
     "    pinn.train(100, 10)\n",
     "    with open('qge_history_{}.txt'.format(id_run), 'w') as file_:\n",
@@ -151,6 +159,13 @@
     "    plotter.plot(pinn, components='si')\n",
     "    plotter.plot_loss(pinn)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
