--- a/examples/problems/_QGE.ipynb
+++ b/examples/problems/_QGE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,28 +89,28 @@
      "output_type": "stream",
      "text": [
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00000] 4.596383e+00 9.465576e-02 1.289987e-01 6.257340e-01 1.262244e-01 4.492284e-01 1.279554e-01 4.481099e-01 1.252213e-01 1.546480e+00 4.750965e-01 4.486783e-01 7.133527e-23 \n",
+      "[epoch 00000] 1.069388e+01 1.047776e+00 1.463900e+00 1.208108e+00 1.451941e+00 4.462402e-01 1.460613e+00 4.470644e-01 1.448370e+00 8.356909e-01 4.375242e-01 4.466504e-01 1.891934e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00001] 4.127789e+00 5.082783e-02 5.857614e-02 9.685171e-01 5.738002e-02 4.182834e-01 5.810627e-02 4.183000e-01 5.693063e-02 1.147446e+00 4.751226e-01 4.182987e-01 5.239217e-23 \n",
+      "[epoch 00001] 7.857171e+00 8.288423e-01 8.192036e-01 8.542905e-01 8.075427e-01 4.388306e-01 8.157874e-01 4.381738e-01 8.038858e-01 1.174595e+00 4.375193e-01 4.385004e-01 1.960187e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00010] 3.648098e+00 9.521527e-03 1.504333e-02 9.525780e-01 1.500309e-02 3.687067e-01 1.512767e-02 3.685733e-01 1.507650e-02 1.044782e+00 4.750425e-01 3.686426e-01 2.231908e-23 \n",
+      "[epoch 00010] 4.183349e+00 9.235127e-02 7.958755e-02 1.161971e+00 8.143102e-02 4.365215e-01 8.067164e-02 4.365612e-01 8.247714e-02 8.577325e-01 4.375032e-01 4.365408e-01 3.282754e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00020] 3.556376e+00 1.757568e-03 2.322896e-03 9.979103e-01 2.188642e-03 3.644857e-01 2.141444e-03 3.643892e-01 2.017416e-03 9.796650e-01 4.750598e-01 3.644378e-01 6.326164e-23 \n",
+      "[epoch 00020] 3.774144e+00 3.682229e-04 6.856802e-03 1.004552e+00 7.349079e-03 4.316183e-01 7.363415e-03 4.316254e-01 7.859304e-03 1.007432e+00 4.374982e-01 4.316214e-01 7.943833e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00030] 3.450492e+00 6.903266e-05 6.470439e-04 9.529269e-01 4.729591e-04 3.540168e-01 4.002090e-04 3.537005e-01 2.679654e-04 9.591597e-01 4.750032e-01 3.538274e-01 1.404067e-21 \n",
+      "[epoch 00030] 3.777964e+00 1.508179e-02 7.705146e-03 9.663759e-01 7.643436e-03 4.299818e-01 7.803531e-03 4.299547e-01 7.746603e-03 1.038211e+00 4.374924e-01 4.299679e-01 5.740800e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00040] 2.913270e+00 2.444340e-03 6.819163e-04 8.476053e-01 6.821170e-04 2.901137e-01 7.335973e-04 2.924458e-01 1.066888e-03 7.120418e-01 4.746010e-01 2.908536e-01 6.606725e-20 \n",
+      "[epoch 00040] 3.736973e+00 6.901036e-03 2.166466e-03 1.018361e+00 2.126822e-03 4.284020e-01 2.132531e-03 4.284145e-01 2.094282e-03 9.804695e-01 4.374970e-01 4.284081e-01 3.409331e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00050] 1.043584e+00 2.596296e-04 1.133026e-02 2.562585e-01 2.731963e-03 5.769854e-02 1.695854e-03 1.043888e-01 7.114472e-04 5.864041e-02 4.719788e-01 7.788983e-02 5.166329e-18 \n",
+      "[epoch 00050] 3.728097e+00 8.096605e-04 2.537993e-03 9.933563e-01 2.595076e-03 4.278341e-01 2.547986e-03 4.278322e-01 2.608953e-03 1.002643e+00 4.374992e-01 4.278330e-01 3.545637e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00060] 6.929560e-01 1.757432e-03 5.636476e-04 2.407588e-02 2.130151e-03 2.967824e-02 2.162569e-03 3.926783e-02 1.249962e-03 8.904722e-02 4.715795e-01 3.144361e-02 5.910445e-18 \n",
+      "[epoch 00060] 3.718459e+00 4.493272e-04 1.404016e-03 1.003322e+00 1.321493e-03 4.272748e-01 1.287918e-03 4.272839e-01 1.211602e-03 9.901257e-01 4.375001e-01 4.272792e-01 5.351055e-22 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00070] 5.504549e-01 2.401190e-04 2.205587e-04 2.899063e-02 5.907647e-04 8.154479e-03 7.661279e-04 1.265917e-02 3.516099e-03 1.286366e-02 4.734118e-01 9.041545e-03 3.170798e-18 \n",
+      "[epoch 00070] 3.708947e+00 8.444801e-04 6.253890e-04 9.900693e-01 5.157577e-04 4.263841e-01 4.859887e-04 4.263838e-01 3.941551e-04 9.993599e-01 4.375002e-01 4.263837e-01 1.275036e-21 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00080] 5.133942e-01 4.164526e-04 2.850695e-04 1.220937e-02 8.065357e-04 7.204802e-03 8.199941e-04 3.846897e-03 8.037472e-04 7.302342e-03 4.748078e-01 4.891215e-03 2.212092e-18 \n",
+      "[epoch 00080] 3.694818e+00 5.945576e-04 3.213373e-04 9.970771e-01 2.474543e-04 4.246967e-01 2.362526e-04 4.247029e-01 2.208213e-04 9.845232e-01 4.374986e-01 4.246994e-01 2.670124e-21 \n",
       "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00090] 5.057357e-01 9.408018e-05 7.219871e-04 6.688829e-03 3.712844e-04 7.477771e-03 3.855122e-04 4.324162e-03 5.043219e-04 4.072263e-03 4.754677e-01 5.627831e-03 2.257090e-18 \n",
-      "[epoch 00100] 4.911764e-01 1.496597e-04 5.381473e-04 5.328468e-03 2.677701e-04 2.716702e-03 2.716647e-04 2.209571e-03 3.644706e-04 1.712634e-03 4.753574e-01 2.259949e-03 1.918077e-18 \n"
+      "[epoch 00090] 3.662988e+00 1.296332e-04 2.920861e-04 9.921818e-01 2.972859e-04 4.205681e-01 3.426581e-04 4.205621e-01 5.526330e-04 9.700086e-01 4.374891e-01 4.205636e-01 7.982208e-21 \n",
+      "[epoch 00100] 3.528811e+00 2.955484e-05 9.902506e-04 9.709591e-01 1.071140e-03 4.026440e-01 1.327339e-03 4.027028e-01 2.563589e-03 9.064373e-01 4.374235e-01 4.026624e-01 5.101078e-20 \n"
      ]
     }
    ],
@@ -144,8 +144,8 @@
     "if save:\n",
     "    pinn.span_pts(\n",
     "            {'n': 100, 'mode': 'grid', 'variables': 't'},\n",
-    "            {'n': 20, 'mode': 'grid', 'variables': 'x'},\n",
-    "            {'n': 20, 'mode': 'grid', 'variables': 'y'},\n",
+    "            {'n': 4, 'mode': 'grid', 'variables': 'x'},\n",
+    "            {'n': 8, 'mode': 'grid', 'variables': 'y'},\n",
     "            locations=['t0', 'upper','fixedWall1','fixedWall2','fixedWall3', 'D'])\n",
     "    \n",
     "    pinn.train(100, 10)\n",
