--- a/examples/problems/_QGE.ipynb
+++ b/examples/problems/_QGE.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import torch\n",
     "\n",
     "from pina.problem import SpatialProblem, TimeDependentProblem\n",
@@ -115,11 +114,8 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "from torch.nn import ReLU, Tanh, Softplus\n",
     "\n",
+    "from torch.nn import Softplus\n",
     "from pina import PINN, LabelTensor, Plotter\n",
     "from pina.model import FeedForward\n",
     "\n",
