--- a/examples/problems/_QGE.ipynb
+++ b/examples/problems/_QGE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "\n",
     "    output_variables = ['q', 'si']\n",
     "    spatial_domain = Span({'x': [0, 1], 'y': [-1, 1]})\n",
-    "    temporal_domain = Span({'t': [0, 100]})\n",
+    "    temporal_domain = Span({'t': [0, 1]})\n",
     "    \n",
     "    def rand_choice_integer_Data(self):\n",
     "        pass \n",
@@ -74,42 +74,42 @@
     "        'fixedWall2': Condition(Span({'x':  1, 'y': [-1,1], 't': [0,100]}), [si, zeta]),\n",
     "        'fixedWall3': Condition(Span({'x':  [0,1], 'y': -1, 't': [0,100]}), [si, zeta]),\n",
     "        \n",
-    "        'D': Condition(Span({'x': [0, 1], 'y': [-1, 1], 't': [0, 100]}), [eq1, eq2, continuity]),\n",
+    "        'D': Condition(Span({'x': [0, 1], 'y': [-1, 1], 't': [0, 100]}), [eq1, eq2]),\n",
     "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00000] 1.069388e+01 1.047776e+00 1.463900e+00 1.208108e+00 1.451941e+00 4.462402e-01 1.460613e+00 4.470644e-01 1.448370e+00 8.356909e-01 4.375242e-01 4.466504e-01 1.891934e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00001] 7.857171e+00 8.288423e-01 8.192036e-01 8.542905e-01 8.075427e-01 4.388306e-01 8.157874e-01 4.381738e-01 8.038858e-01 1.174595e+00 4.375193e-01 4.385004e-01 1.960187e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00010] 4.183349e+00 9.235127e-02 7.958755e-02 1.161971e+00 8.143102e-02 4.365215e-01 8.067164e-02 4.365612e-01 8.247714e-02 8.577325e-01 4.375032e-01 4.365408e-01 3.282754e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00020] 3.774144e+00 3.682229e-04 6.856802e-03 1.004552e+00 7.349079e-03 4.316183e-01 7.363415e-03 4.316254e-01 7.859304e-03 1.007432e+00 4.374982e-01 4.316214e-01 7.943833e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00030] 3.777964e+00 1.508179e-02 7.705146e-03 9.663759e-01 7.643436e-03 4.299818e-01 7.803531e-03 4.299547e-01 7.746603e-03 1.038211e+00 4.374924e-01 4.299679e-01 5.740800e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00040] 3.736973e+00 6.901036e-03 2.166466e-03 1.018361e+00 2.126822e-03 4.284020e-01 2.132531e-03 4.284145e-01 2.094282e-03 9.804695e-01 4.374970e-01 4.284081e-01 3.409331e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00050] 3.728097e+00 8.096605e-04 2.537993e-03 9.933563e-01 2.595076e-03 4.278341e-01 2.547986e-03 4.278322e-01 2.608953e-03 1.002643e+00 4.374992e-01 4.278330e-01 3.545637e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00060] 3.718459e+00 4.493272e-04 1.404016e-03 1.003322e+00 1.321493e-03 4.272748e-01 1.287918e-03 4.272839e-01 1.211602e-03 9.901257e-01 4.375001e-01 4.272792e-01 5.351055e-22 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00070] 3.708947e+00 8.444801e-04 6.253890e-04 9.900693e-01 5.157577e-04 4.263841e-01 4.859887e-04 4.263838e-01 3.941551e-04 9.993599e-01 4.375002e-01 4.263837e-01 1.275036e-21 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00080] 3.694818e+00 5.945576e-04 3.213373e-04 9.970771e-01 2.474543e-04 4.246967e-01 2.362526e-04 4.247029e-01 2.208213e-04 9.845232e-01 4.374986e-01 4.246994e-01 2.670124e-21 \n",
-      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         Dcontinuity  \n",
-      "[epoch 00090] 3.662988e+00 1.296332e-04 2.920861e-04 9.921818e-01 2.972859e-04 4.205681e-01 3.426581e-04 4.205621e-01 5.526330e-04 9.700086e-01 4.374891e-01 4.205636e-01 7.982208e-21 \n",
-      "[epoch 00100] 3.528811e+00 2.955484e-05 9.902506e-04 9.709591e-01 1.071140e-03 4.026440e-01 1.327339e-03 4.027028e-01 2.563589e-03 9.064373e-01 4.374235e-01 4.026624e-01 5.101078e-20 \n"
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 00000] 5.737945e+00 4.274926e-02 4.757062e-01 1.147866e+00 4.670334e-01 4.399314e-01 4.796188e-01 4.410101e-01 4.707945e-01 8.952271e-01 4.375463e-01 4.404623e-01 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 00001] 4.111963e+00 9.399164e-02 6.102233e-02 9.515398e-01 5.789971e-02 4.373238e-01 6.041072e-02 4.368309e-01 5.727151e-02 1.081058e+00 4.375400e-01 4.370746e-01 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 01500] 1.394918e-01 6.277619e-03 4.487215e-04 7.418900e-04 3.138260e-02 2.786314e-03 3.203063e-02 2.293385e-03 2.459138e-04 6.479413e-04 5.989643e-02 2.740308e-03 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 03000] 1.273968e-01 5.647906e-03 2.084999e-04 3.009488e-04 3.001224e-02 5.099166e-03 2.853780e-02 6.515109e-03 2.001378e-04 3.581049e-04 4.452228e-02 5.994628e-03 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 04500] 1.027289e-01 4.314355e-03 1.589083e-04 3.168967e-04 2.576068e-02 4.966708e-03 2.457332e-02 4.023260e-03 6.649616e-05 2.085648e-04 2.912410e-02 9.215571e-03 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 06000] 9.935859e-02 4.206858e-03 9.188884e-05 4.463027e-04 2.699308e-02 5.412314e-03 2.609007e-02 2.469241e-03 2.054490e-04 2.059755e-04 2.871942e-02 4.517977e-03 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 07500] 7.094615e-02 4.409437e-03 3.989117e-04 1.237434e-04 1.382897e-02 4.106371e-03 1.384138e-02 3.816714e-03 2.135892e-03 1.015193e-03 2.100644e-02 6.263092e-03 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 09000] 1.208180e-01 4.735960e-03 4.177709e-05 1.285354e-03 1.021842e-02 1.204790e-02 8.408356e-03 1.244284e-02 4.961343e-03 8.387514e-03 4.670377e-02 1.158474e-02 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 10500] 7.361144e-03 1.123521e-03 1.975566e-05 5.022389e-05 2.244572e-03 2.568827e-04 2.293875e-03 3.292244e-04 2.683897e-05 4.392613e-06 5.159830e-04 4.958753e-04 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 12000] 2.676408e-02 1.605642e-03 3.838367e-04 6.931885e-05 1.865557e-03 3.862964e-03 6.916436e-03 5.367424e-03 3.640233e-04 1.510627e-04 4.701035e-03 1.476776e-03 \n",
+      "              sum          t0initial    uppersi      upperzeta    fixedWall1si fixedWall1ze fixedWall2si fixedWall2ze fixedWall3si fixedWall3ze Deq1         Deq2         \n",
+      "[epoch 13500] 6.524997e-03 7.836066e-04 4.010240e-05 7.195409e-06 1.500543e-03 7.791396e-04 1.113642e-03 1.292371e-03 3.188108e-05 2.691034e-05 3.631662e-04 5.864392e-04 \n",
+      "[epoch 15000] 6.112363e-03 6.863847e-04 7.003737e-06 1.031385e-05 1.105961e-03 7.258755e-04 1.497178e-03 1.204304e-03 1.109372e-05 1.358331e-05 5.459014e-04 3.047632e-04 \n"
      ]
     }
    ],
@@ -133,18 +133,18 @@
     "pinn = PINN(\n",
     "    qge_problem,\n",
     "    model,\n",
-    "    lr=0.006,\n",
+    "    lr=0.01,\n",
     "    error_norm='mse',\n",
     "    regularizer=1e-8)\n",
     "\n",
     "if save:\n",
     "    pinn.span_pts(\n",
-    "            {'n': 100, 'mode': 'grid', 'variables': 't'},\n",
+    "            {'n': 25, 'mode': 'grid', 'variables': 't'},\n",
     "            {'n': 4, 'mode': 'grid', 'variables': 'x'},\n",
     "            {'n': 8, 'mode': 'grid', 'variables': 'y'},\n",
     "            locations=['t0', 'upper','fixedWall1','fixedWall2','fixedWall3', 'D'])\n",
     "    \n",
-    "    pinn.train(100, 10)\n",
+    "    pinn.train(15000, 1500)\n",
     "    with open('qge_history_{}.txt'.format(id_run), 'w') as file_:\n",
     "        for i, losses in pinn.history_loss.items():\n",
     "            file_.write('{} {}\\n'.format(i, sum(losses)))\n",
